# startup_nation_2024

./: .env  Makefile  README.md  ToDo.md  alembic.ini  main.py  psqlClient.py  pyproject.toml  requirements.txt  test.py
auth/: database.py
migrations/versions/: 1319728bde07_test_init.py
models/: models.py
